# abandoned-addresses

./: .gitignore  README.md  brownie-config.yaml  network-config.yaml
contracts/: AbandonedAddresses.sol  Blacklist.sol
go/: README.md  commands.go  go.mod  go.sum  main.go
go/contract/: contract.go
rust/: .gitignore  Cargo.toml  README.md
rust/src/: lib.rs
scripts/: deploy.py
tests/: test_all.py
www/: behold-wasm-support.html  default.css  index.etheres.js  index.html  index.js
www/deployments/: README.md
www/res/: index.js
