[package]
name = "abandoned-addresses"
version = "0.0.1"
authors = ["Mike Burr mb@unintuitive.org"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.74"

[dependencies.web-sys]
version = "0.3.51"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
